--- a/YassineSaddikiApp/AppShell.xaml
+++ b/YassineSaddikiApp/AppShell.xaml
@@ -7,9 +7,19 @@
     Shell.FlyoutBehavior="Disabled"
     Title="YassineSaddikiApp">
 
-    <ShellContent
-        Title="Home"
-        ContentTemplate="{DataTemplate local:MainPage}"
-        Route="MainPage" />
+    <TabBar x:Name="PhoneTabs">
+        <Tab Title="Home" Icon="home.svg">
+            <ShellContent ContentTemplate="{DataTemplate local:HomePage}"/>
+        </Tab>
+        <Tab Title="X" Icon="option.svg">
+            <ShellContent ContentTemplate="{DataTemplate local:SecondPage}"/>
+        </Tab>
+        <Tab Title="X" Icon="option.svg">
+            <ShellContent ContentTemplate="{DataTemplate local:ThirdPage}"/>
+        </Tab>
+        <Tab Title="X" Icon="option.svg">
+            <ShellContent ContentTemplate="{DataTemplate local:FourthPage}"/>
+        </Tab>
+    </TabBar>
 
 </Shell>
