--- a/YassineSaddikiApp/CoffeeDetailPage.xaml
+++ b/YassineSaddikiApp/CoffeeDetailPage.xaml
@@ -7,6 +7,19 @@
             <Image x:Name="coffeeImage" HeightRequest="200" Aspect="AspectFill" />
             <Label x:Name="titleLabel" FontAttributes="Bold" FontSize="24" TextColor="Black" Margin="0,10,0,0"/>
             <Label x:Name="descriptionLabel" FontSize="16" TextColor="Black" Margin="0,10,0,0"/>
+
+            <Button 
+                Text="BACK" 
+                CornerRadius="10" 
+                BackgroundColor="SandyBrown" 
+                FontAttributes="Bold" 
+                FontSize="20" 
+                TextColor="White" 
+                FontFamily="Oswald" 
+                Padding="10"
+                Margin="20" 
+                Clicked="Clicked"
+                /> 
         </StackLayout>
     </ScrollView>
 </ContentPage>
