--- a/YassineSaddikiApp/PageThird.xaml
+++ b/YassineSaddikiApp/PageThird.xaml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             xmlns:handlers="clr-namespace:YassineSaddikiApp.Handlers"
              x:Class="YassineSaddikiApp.PageThird"
              >
     <ScrollView>
@@ -14,9 +15,28 @@
             FontSize="20"
             FontFamily="Oswald"
             />
-            <Entry Placeholder="Titre" x:Name="titreEntry" />
+            <!--<Entry Placeholder="Titre" x:Name="titreEntry" />
+            <Editor Placeholder="Description" x:Name="descriptionEditor" />-->
 
-            <Editor Placeholder="Description" x:Name="descriptionEditor" />
+            <StackLayout Orientation="Horizontal">
+                <Frame ZIndex="1"  HasShadow="True" BorderColor="White" HeightRequest="56" WidthRequest="56" CornerRadius="28">
+                    <Image Source="cafe.png" HeightRequest="20" WidthRequest="20"/>
+                </Frame>
+                <Frame HeightRequest="45" Margin="-20,0,0,0" Padding="0" HasShadow="True" BorderColor="White" HorizontalOptions="FillAndExpand">
+                    <handlers:BorderlessEntry Margin="20,0,0,0" VerticalOptions="Center" Placeholder="Titre" Keyboard="Email"/>
+                </Frame>
+            </StackLayout>
+
+            <StackLayout Orientation="Horizontal">
+                <Frame ZIndex="1"  HasShadow="True" BorderColor="White" HeightRequest="56" WidthRequest="56" CornerRadius="28">
+                    <Image Source="description.png" HeightRequest="20" WidthRequest="20"/>
+                </Frame>
+                <Frame HeightRequest="45" Margin="-20,0,0,0" Padding="0" HasShadow="True" BorderColor="White" HorizontalOptions="FillAndExpand">
+                    <handlers:BorderlessEntry Margin="20,0,0,0" VerticalOptions="Center" Placeholder="Description"   Keyboard="Email"/>
+                </Frame>
+            </StackLayout>
+
+            <Button Text="Ajouter" WidthRequest="100" CornerRadius="20"  HorizontalOptions="Center" FontAttributes="Bold" FontFamily="Oswald" BackgroundColor="SandyBrown"/>
         </VerticalStackLayout>
     </ScrollView>
 </ContentPage>
